2003-06-09 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Improved the dialog in the transfer call
	popup.

	* src/endpoint.cpp: Fixed OpenAudioChannel.
	
	* src/gnomemeeting.cpp: Prevents crash when connection is NULL
	when clicking on Disconnect.

	* src/misc.cpp: HIGified the incoming call popup window.
	
2003-06-09 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Fixed transfer_call_cb buttons.
	
	* src/common.h: Added GCONF KEY.
	
	* src/ldap_window.cpp: Added Transfer Call to right-click menu
	on a contact when you are in a call.

	* src/main_window.cpp: Made the GCONF error dialog appear above
	the GM window.
	
	* src/menu.cpp: Fixed transfer_call_cb parameter.
	
	* src/urlhandler.cpp: Do transfer calls to invalid URLs.
	
2003-06-09 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Fixed LDAP detection test. Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Added a new key to enable auto clear
	or not of the text chat window at the end of calls.
	
	* src/callbacks.cpp, src/callbacks.h: Added a call_transfer_cb 
	displaying a popup to transfer calls.
	
	* src/chat_window.cpp, src/chat_window.h: Code cleanups. Added
	a clear button for the text chat.
	
	* src/common.h: Added new widget for the new auto_clear option.
	
	* src/config.cpp: Added new notifier for the new auto_clear option.

	* src/endpoint.cpp, src/endpoint.h: Only clears the text chat at
	the end of calls if specified. Added support for H.450.2 Call Transfer.
	Updates the menu of the addressbook at the end of calls.
	
	* src/ldap_window.cpp, src/ldap_window.h: Added Call Transfer support
	in the addressbook menus. You can now double click on a contact
	to call him OR to transfer a current call to him.
	
	* src/main_window.cpp: Code cleanups. 
	
	* src/menu.cpp, src/menu.h: Removed the call_transfer_cb from
	there and made it global so that it can be used in the address book
	too. Added a clear menu item for the text chat.
	