@@ -105,14 +105,14 @@ transfer_call_cb (GtkWidget* widget,
 			      GTK_STOCK_CANCEL, 0);
   b2 = gtk_dialog_add_button (GTK_DIALOG (transfer_call_popup),
 			      _("_Transfer Call"), 1); 
-  gtk_dialog_set_default_response (GTK_DIALOG (widget), 1);
+  gtk_dialog_set_default_response (GTK_DIALOG (transfer_call_popup), 1);
   
   label = gtk_label_new (_("Forward call to:"));
   hbox = gtk_hbox_new (0, 0);
   
   gtk_box_pack_start (GTK_BOX 
 		      (GTK_DIALOG (transfer_call_popup)->vbox), 
-		      hbox, TRUE, TRUE, 0);
+		      hbox, TRUE, TRUE, 10);
     
   entry = gtk_entry_new ();
   gtk_entry_set_text (GTK_ENTRY (entry),
@@ -124,9 +124,9 @@ transfer_call_cb (GtkWidget* widget,
   gconf_forward_value = NULL;
 
   gtk_box_pack_start (GTK_BOX (hbox), 
-		      label, TRUE, TRUE, 20);
+		      label, TRUE, TRUE, 10);
   gtk_box_pack_start (GTK_BOX (hbox), 
-		      entry, TRUE, TRUE, 20);
+		      entry, TRUE, TRUE, 10);
 
   gtk_window_set_modal (GTK_WINDOW (transfer_call_popup), TRUE);
 
